# GalnameFix

./: README.md  pyproject.toml
examples/notebooks/: Sampledata_withnames.ipynb  prg_36-for_public.csv  prg_withnames.csv
examples/notebooks/.ipynb_checkpoints/: sample_run-checkpoint.ipynb
galnamefix/: __init__.py  core.py  primary_name.py  query_catalogs.py
notebooks/: .~lock.prg_36-for_public.csv#  Sampledata_withnames.ipynb  sample_run.ipynb
